Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 475
    • Issues 475
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 44
    • Merge requests 44
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • FilesFiles
  • Issues
  • #448
Closed
Open
Created May 19, 2018 by FeRD (Frank Dana)@ferdnyc

Solution for Type=Link .desktop files?

For the longest time, I've used .desktop files with Type=Link and sftp:///... URLs to create "shortcuts" between different locations on my local network. For example, Devhost might contain a file /home/ferd/Documents/Documents on Testserver.desktop with the contents:

[Desktop Entry]
Version=1.0
Encoding=UTF-8
Name=Downloads on Testserver
Type=Link
URL=sftp://ferd@testserver/home/ferd/Documents/
Icon=folder-remote

After upgrading to 3.28 those links appear to no longer be working correctly, though they do sort of work — if I right-click on the "Downloads on Testserver" link and choose Properties, I'm shown the file counts, size, and free space available for the remote filesystem. But double-clicking the icon (or choosing "Open" from the context menu) produces an error message:

image

And I'm getting the impression that, even if this did work, with the removal of .desktop launching support Type=Link files will no longer be supported either. (Please correct me if I'm wrong.) So, is there any other solution to creating links between network filesystem paths?

Reproducible in:

  • Other: Fedora 28, nautilus-3.28.1-1.fc28.x86_64
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking