google: Do not create .desktop files for native files

Currently, .desktop file with a link to the original location is provided,
when a native file is opened because Google doesn't provide its proprietary
formats and GLocalFile doesn't know G_FILE_TYPE_SHORTCUT. It is a bit
tricky and confusing, among other because the .desktop files aren't
automatically converted back to native files when writing.

What is worse, Nautilus has dropped support for .desktop files recently,
so you see "There was an error launching the application." instead of the
requested file. It doesn't make more sense to provide this .desktop files,
so let's remove this fallback and return error instead.

https://gitlab.gnome.org/GNOME/nautilus/issues/448